# rama-hacknation

./: README.md
BE/: .gitignore  README.md  chatbot.py  import_resumes.py  pyproject.toml  requirements.in  requirements.txt  resumes.json
FE/: README.md  package-lock.json  package.json
FE/src/: App.jsx  CandidateProfilePage.jsx  HomePage.jsx  SearchResultsPage.jsx
