[project]
name = "be"
version = "0.1.0"
description = ""
authors = [
    {name = "it-dainb",email = "it.dainb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dspy (>=2.6.27,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pymilvus (>=2.6.0,<3.0.0)",
    "langchain-openai (>=0.3.29,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "protobuf (==5.27.2)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
